--- a/MVT/Templates/patients/create_patient.html
+++ b/MVT/Templates/patients/create_patient.html
@@ -3,7 +3,9 @@
 creacion de Pacientes
 {% endblock %}
 
-{% block navbar %} <a class="nav-item nav-link active" href="/create/">Crear Paciente</a> {% endblock %}
+{% block navbar %}
+
+{% endblock %}
 
 {% block content %}
 {%  if form  %}
