--- a/MVT/Templates/patients/list_patients.html
+++ b/MVT/Templates/patients/list_patients.html
@@ -2,6 +2,12 @@
 {% block title %}  
 Listado de Pacientes
 {% endblock %}
+{% block navbar %}
+<form class="form-inline my-2 my-lg-0" action="/list/" method="GET">
+    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+</form>
+{% endblock %}
 
 {% block content %}
 
