--- a/MVT/Templates/medicines/list_medicines.html
+++ b/MVT/Templates/medicines/list_medicines.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
+
 {% block title %}  
 Listado de Ordenes
+{% endblock %}
+
+{% block navbar %}
+<form class="form-inline my-2 my-lg-0" action="/mlist/" method="GET">
+    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+</form>
 {% endblock %}
 
 {% block content %}
