--- a/MVT/Templates/medicines/create_medicines.html
+++ b/MVT/Templates/medicines/create_medicines.html
@@ -6,9 +6,9 @@ creacion de Recetas
 {% block content %}
 
 {% if form %}
-<h1>hola desde la creacion de Recetas</h1>
+<h1>creacion de Recetas</h1>
 
-<form action="" method="POST">
+<form class="text-light" method="POST">
     {% csrf_token %}
 
 
@@ -25,6 +25,8 @@ creacion de Recetas
 <h1>se creo la receta exitosamente</h1>
 {% endif %}
 {% if form_errors %}
-    {{form_errors}}    <!-- terminar los errores  -->
+<h1>Se encontro un error!</h1>
+<h2 style="color: red;" >Errores:</h2>
+{{form_errors}}
 {% endif %}
 {% endblock %}
