--- a/MVT/Templates/patients/create_patient.html
+++ b/MVT/Templates/patients/create_patient.html
@@ -9,11 +9,10 @@ creacion de Pacientes
 
 {% block content %}
 {%  if form  %}
-<h1>hola desde la creacion</h1>
+<h1>Creacion de pacientes</h1>
 
-<form action="" method="POST">
+<form class="text-light" method="POST">
     {% csrf_token %}
-
 
     <p>Nombre: <input type="text" name="name"></p>
     <p>Apellido: <input type="text" name="surname"></p>
@@ -24,13 +23,17 @@ creacion de Pacientes
 
     <input type="submit" value="Crear Paciente">
 </form>
+
+
 {% else %}
     <h1>hola desde el post </h1>
     <h1>se creo el paciente exitosamente</h1>
 {% endif %}
 
 {% if form_errors %}
-    {{form_errors}}    <!-- terminar los errores  -->
+<h1>Se encontro un error!</h1>
+<h2 style="color: red;" >Errores:</h2>
+{{form_errors}}
 {% endif %}
 {% endblock %}
 
