agregado funciones DeleteView

--- a/MVT/Templates/medicines/create_medicines.html
+++ b/MVT/Templates/medicines/create_medicines.html
@@ -22,7 +22,7 @@ creacion de Recetas
     <input type="submit" value="Crear Receta">
 </form>
 {% else %}
-<h1>se creo la receta exitosamente</h1>
+<h1 class="text-success">la receta se creo exitosamente</h1>
 {% endif %}
 {% if form_errors %}
 <h1>Se encontro un error!</h1>
