--- a/MVT/Templates/orders/create_orders.html
+++ b/MVT/Templates/orders/create_orders.html
@@ -21,7 +21,7 @@ creacion de Ordenes
     <input type="submit" value="Crear Orden">
 </form>
 {% else %}
-<h1>se creo la orden exitosamente</h1>
+<h1 class="text-success">la orden se creo exitosamente</h1>
 {% endif %}
 
 {% if form_errors %}
