--- a/MVT/Templates/orders/list_orders.html
+++ b/MVT/Templates/orders/list_orders.html
@@ -46,7 +46,7 @@ Listado de Ordenes
             </div>
             <div class="card-footer">
                 <a href="/update-order/{{order.id}}/" class="btn btn-primary mr-5">Actualizar</a>
-                <a href="" class="btn btn-danger ml-5">Eliminar</a>
+                <a href="/delete-order/{{order.id}}/" class="btn btn-danger ml-5">Eliminar</a>
             </div>
         </div>
         </div>
