--- a/MVT/Templates/patients/list_patients.html
+++ b/MVT/Templates/patients/list_patients.html
@@ -39,8 +39,9 @@ Listado de Pacientes
 
     <td>{{patient.affiliate_code}}</td>
 
-    <td><a href="/update-patient/{{patient.id}}/" class="btn btn-primary">Actualizar</a>
-        <a href="" class="btn btn-danger">Eliminar</a>
+    <td>
+        <a href="/update-patient/{{patient.id}}/" class="btn btn-primary">Actualizar</a>
+        <a href="/delete-patient/{{patient.id}}/" class="btn btn-danger">Eliminar</a>
     </td>
 
 </tr>
