--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -46,6 +46,10 @@
                         </div>
                     </li>
                     {% block navbar %}
+                    <form class="form-inline my-2 my-lg-0" action="" method="GET">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                    </form>
                     {% endblock %}
                 </div>
             </div>
