--- a/MVT/Templates/medicines/list_medicines.html
+++ b/MVT/Templates/medicines/list_medicines.html
@@ -28,7 +28,7 @@ Listado de Ordenes
                 </div>
                 <div class="card-footer">
                     <a href="/update-medicine/{{medicine.id}}/" class="btn btn-primary mr-5">Actualizar</a>
-                    <a href="" class="btn btn-danger ml-5">Eliminar</a>
+                    <a href="/delete-medicine/{{medicine.id}}/" class="btn btn-danger ml-5">Eliminar</a>
                 </div>
             </div>
             </div>
