--- a/MVT/Templates/index.html
+++ b/MVT/Templates/index.html
@@ -5,6 +5,7 @@ INDEX
 
 {% block content %}
 
-    <h1>INDEX</h1>
+    <h1>Entrega intermedia</h1>
+    <h2>Juan Ignacio Reyes Vega Weiss</h2>
 
 {% endblock %}
