--- a/MVT/Templates/index.html
+++ b/MVT/Templates/index.html
@@ -4,8 +4,8 @@ INDEX
 {% endblock %}
 
 {% block content %}
-
+    <div class="text-light">
     <h1>Entrega intermedia</h1>
     <h2>Juan Ignacio Reyes Vega Weiss</h2>
-
+    </div>
 {% endblock %}
