--- a/MVT/Templates/orders/create_orders.html
+++ b/MVT/Templates/orders/create_orders.html
@@ -16,6 +16,7 @@ creacion de Ordenes
     <p>Fecha de indicacion: <input  name="indication_date" placeholder="DD/MM/YYY" type="date"/></p>
     <p>esta completado? {{form.done}}</p>
     <p>descripcion de la orden: {{form.description}}</p>
+    <p>para quien es la orden?: {{form.patient}}</p>
 
 
     <input type="submit" value="Crear Orden">
