--- a/MVT/Templates/index.html
+++ b/MVT/Templates/index.html
@@ -7,5 +7,9 @@ INDEX
     <div class="text-light">
     <h1>Entrega intermedia</h1>
     <h2>Juan Ignacio Reyes Vega Weiss</h2>
+    {% if message %}
+        <h2>{{message}}</h2>
+
+    {% endif %}
     </div>
 {% endblock %}
