--- a/MVT/Templates/medicines/list_medicines.html
+++ b/MVT/Templates/medicines/list_medicines.html
@@ -5,13 +5,14 @@ Listado de Ordenes
 {% endblock %}
 
 {% block navbar %}
-<form class="form-inline my-2 my-lg-0" action="/list-medicines/" method="GET">
+<form class="form-inline my-2 my-lg-0 d-flex" action="/list-medicines/" method="GET">
     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="search">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
 </form>
 {% endblock %}
 
 {% block content %}
+
 
 
 
@@ -31,10 +32,12 @@ Listado de Ordenes
                     <p class="card-text">dosis indicada: {{medicine.dose}}mg</p>
                     <p class="card-text"><small class="text-muted">fecha de indicacion: {{medicine.indication_date}}</small></p>
                 </div>
+                {% if request.user.is_superuser %}
                 <div class="card-footer">
                     <a href="/update-medicine/{{medicine.id}}/" class="btn btn-primary mr-5">Actualizar</a>
                     <a href="/delete-medicine/{{medicine.id}}/" class="btn btn-danger ml-5">Eliminar</a>
                 </div>
+                {% endif %}
             </div>
             </div>
         </div>
