--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -51,6 +51,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/logout/">LogOut</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/update-user/">update</a>
+                        </li>
                     {% else %}
                         <li class="nav-item border-success">
                             <a class="nav-link" href="/login/">LogIn</a>
