--- a/MVT/Templates/orders/create_orders.html
+++ b/MVT/Templates/orders/create_orders.html
@@ -18,7 +18,7 @@ creacion de Ordenes
     <p>descripcion de la orden: {{form.description}}</p>
     
 
-    <!-- <p>para quien es la orden?: {{form.patient}} intentar hacer que se pueda elegir a que paciente indicar esta orden </p> -->
+    <!-- <p>para quien es la orden?: {{form.patient}} intentar hacer que se pueda elegir entre pacientes </p> -->
     
 
     <input type="submit" value="Crear Orden">
