--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -1,107 +1,116 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}  {% endblock %}</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %} {% endblock %}</title>
 </head>
+{% block header %}
 <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex">
-            <a class="navbar-brand" href="/">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5LlQCrw7Yh54_ZSyfxi5tbiYgh6i9SNdgrQ&usqp=CAU" width="30" height="30" class="d-inline-block align-top" alt="Logo Coder">
-                Consultorio
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark flex">
+        <a class="navbar-brand" href="/">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT5LlQCrw7Yh54_ZSyfxi5tbiYgh6i9SNdgrQ&usqp=CAU"
+                width="30" height="30" class="d-inline-block align-top" alt="Logo Coder" />
+            Consultorio
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav text-center">
-                    <a class="nav-item nav-link" href="/">Inicio</a>
-                    {% if request.user.is_superuser %}
-                        <a class="nav-item nav-link" href="/admin/">ADMIN</a>
-                        <a class="nav-item nav-link" href="/create-patient/">Crear Paciente</a>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Creacion
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/create-order/">Crear Orden</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/create-medicine/">Crear Medicacion</a>
-                            </div>
-                        </li>
-                    {% endif %}
-                    <a class="nav-item nav-link" href="/list-patients/">Listar Pacientes</a>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Listado
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/list-orders/">Listar Ordenes</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="/list-medicines/">Listar Medicamentos</a>
-                        </div>
-                    </li>
-                    {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="/logout/">LogOut</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                {{user.username}}
-                                {% if request.user.profile.profile_img.url != "" %}
-                                    <img src="{{request.user.profile.profile_img.url}}" width="30" height="30" class="d-inline-block align-top" alt="Logo Coder">
-                                {% endif %}
-                            </a>
-                            user-profile/
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="/update-profile/">actualizar perfil</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="/update-user/">actualizar usuario</a>
-                            </div>
-                        </li>
-                    {% else %}
-                        <li class="nav-item border-success">
-                            <a class="nav-link" href="/login/">LogIn</a>
-                        </li>
-                        <li class="nav-item border-info">
-                            <a class="nav-link" href="/register/">Register</a>
-                        </li>
-                    {% endif %}
-                    {% block navbar %}
-                        <form class="form-inline my-2 my-lg-0 d-flex" action="" method="GET">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="search">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-                        </form>
-                    {% endblock %}
-                    
-                </div>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav text-center">
+                <a class="nav-item nav-link" href="/">Inicio</a>
+                {% if request.user.is_superuser %}
+                <a class="nav-item nav-link" href="/admin/">ADMIN</a>
+                <a class="nav-item nav-link" href="/create-patient/">Crear Paciente</a>
+                <a class="nav-item nav-link" href="/create-medicine/">Crear Medicacion</a>
+                {% endif %}
+                <a class="nav-item nav-link" href="/list-patients/">Listar Pacientes</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Listado
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/list-orders/">Listar Ordenes</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/list-medicines/">Listar Medicamentos</a>
+                    </div>
+                </li>
+                {% if request.user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout/">LogOut</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/user-profile/">perfil</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{user.username}} {% if request.user.profile.profile_img.url != ""%}
+                        <img src="{{request.user.profile.profile_img.url}}" width="30" height="30"
+                            class="d-inline-block align-top" alt="Logo Coder" />
+                        {% endif %}
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/update-profile/">actualizar perfil</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/update-user/">actualizar usuario</a>
+                    </div>
+                </li>
+                {% else %}
+                <li class="nav-item border-success">
+                    <a class="nav-link" href="/login/">LogIn</a>
+                </li>
+                <li class="nav-item border-info">
+                    <a class="nav-link" href="/register/">Register</a>
+                </li>
+                {% endif %} {% block navbar %}
+                <form class="form-inline my-2 my-lg-0 d-flex" action="" method="GET">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"
+                        name="search" />
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
+                        Buscar
+                    </button>
+                </form>
+                {% endblock %}
             </div>
-        </nav>
+        </div>
+    </nav>
 </header>
+{% endblock header %}
+
 <body class="bg-secondary">
+    {% block content %} {% endblock %}
 
-
-    {% block content %}
-
-    {% endblock %}
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<!-- Include Date Range Picker -->
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <!-- Include Date Range Picker -->
+    <script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
 </body>
-<footer>
+<footer></footer>
 
-</footer>
 </html>
