--- a/MVT/Templates/users/login.html
+++ b/MVT/Templates/users/login.html
@@ -1,29 +1,45 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block title %}  
 Login
 {% endblock %}
+{% block header %}
+<!-- solucion rara para no incluir la navbar -->
+{% endblock header %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static '/css/styleLogin.css' %}">
 {%  if form  %}
-<h1>Log In </h1>
-
-<form class="text-light" method="POST">
+<form class="text-dark" method="POST">
     {% csrf_token %}
-
-    <table>
-        {{form.as_table}}
-    </table>
-
-    <input type="submit" value="LogIn">
+    <div class="login">
+        {% if errors %}
+            <h1 class="text-center" style="color: red;" >{{errors}}</h2>
+        {% else %}
+            <h1 class="text-center">Bienvenido!</h1>
+        {% endif %}
+    <div class="form-group was-validated">
+        <label class="form-label" for="username">Usuario</label>
+        <input class="form-control" type="text" id="username" name="username" required>
+        <div class="invalid-feedback">
+            por favor ingrese un correo valido
+        </div>
+    </div>
+    <div class="form-group was-validated">
+        <label class="form-label" for="password">Contraseña</label>
+        <input class="form-control" type="password" id="password" name="password" required>
+        <div class="invalid-feedback">
+            por favor ingrese una contraseña valida
+        </div>
+    </div>
+    <div class="form-group form-check">
+        <input class="form-check-input" type="checkbox" id="check">
+        <label class="form-check-label" for="check">Recordar usuario</label>
+    </div>
+    <hr>
+    <input class="btn btn-success w-100" type="submit" value="Iniciar Sesion">
 </form>
-
-
-{% endif %}
-
-{% if errors %}
-
-<h2 style="color: red;" >{{errors}}</h2>
+</div>
 
 {% endif %}
 {% endblock %}
