register.css, update-profile y main.css

--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
-
+    <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -86,7 +86,7 @@
 </header>
 {% endblock header %}
 
-<body class="bg-secondary">
+<body class="body">
     {% block content %} {% endblock %}
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -111,6 +111,8 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css" />
 </body>
+{% block footer %}
 <footer></footer>
+{% endblock%}
 
 </html>
