--- a/MVT/Templates/users/register.html
+++ b/MVT/Templates/users/register.html
@@ -7,46 +7,53 @@ Register
 <!-- solucion rara para no incluir la navbar -->
 {% endblock header %}
 {% block content %}
-<link rel="stylesheet" href="{% static '/css/styleLogin.css' %}">
+<link rel="stylesheet" href="{% static '/css/styleRegister.css' %}">
 {%  if form  %}
 
 <form class="text-dark" method="POST">
     {% csrf_token %}
     <div class="login">
-        <h1 class="text-center">Registro</h1>
-    <div class="form-group">
-        <label class="form-label" for="username">Usuario</label>
-        <input class="form-control" type="text" id="username" name="username">
-    </div>
-    <div class="form-group">
-        <label class="form-label" for="password">nombre</label>
-        <input class="form-control" type="text" id="first_name" name="first_name">
-    </div>
-    <div class="form-group">
-        <label class="form-label" for="password">apellido</label>
-        <input class="form-control" type="text" id="last_name" name="last_name">
-    </div>
-    <div class="form-group">
-        <label class="form-label" for="password">email</label>
-        <input class="form-control" type="text" id="email" name="email">
-    </div>
-    <div class="form-group">
-        <label class="form-label" for="password">numero de afiliado</label>
-        <input class="form-control" type="number" id="password" name="affiliate_code">
-    </div>
-    <div class="form-group">
-        <label class="form-label" for="password">Contraseña</label>
-        <input class="form-control" type="password" id="password" name="password1">
-    </div>
-    <div class="form-group">
-        <label class="form-label" for="password">repetir contraseña</label>
-        <input class="form-control" type="password" id="password" name="password2">
-    </div>
-    <hr>
-    <input class="btn btn-success w-100" type="submit" value="Iniciar Sesion">
-</form>
-</div>
+            <h1 class="text-center">Registro</h1>
+        <div class="form-group">
+            <label class="form-label" for="username">Usuario</label>
+            <input class="form-control" type="text" id="username" name="username">
+            <div class="invalid-feedback">
+                {{errors.username}}
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="name">nombre</label>
+            <input class="form-control" type="text" id="first_name" name="first_name">
+        </div>
+        <div class="form-group">
+            <label class="form-label" id="last_name" for="last_name">apellido</label>
+            <input class="form-control" type="text" id="last_name" name="last_name">
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="email">email</label>
+            <input class="form-control" type="text" id="email" name="email">
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="affiliate_code">numero de afiliado</label>
+            <input class="form-control" type="number" id="password" name="affiliate_code">
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="password">Contraseña</label>
+            <input class="form-control" type="password" id="password" name="password1">
+        </div>
+        <div class="form-group">
+            <label class="form-label" for="password2">repetir contraseña</label>
+            <input class="form-control" type="password" id="password" name="password2">
+        </div>
 
+        <div class="form-group">
+            <label class="form-label" for="dni">dni</label>
+            <input class="form-control" type="number" id="dni" name="dni">
+        </div>
+        
+        <input class="btn btn-success w-100"  type="submit" value="Iniciar Sesion">
+    </div>
+</form>
 
 {% endif %}
 
@@ -56,3 +63,7 @@ Register
 
 {% endif %}
 {% endblock %}
+
+{% block footer %}
+
+{% endblock%}
