main.css -> styleMain.css, white text in creation

--- a/MVT/Templates/medicines/create_medicines.html
+++ b/MVT/Templates/medicines/create_medicines.html
@@ -6,7 +6,7 @@ creacion de Recetas
 {% block content %}
 
 {% if form %}
-<h1>creacion de Recetas</h1>
+<h1 style="color: white;">creacion de Recetas</h1>
 
 <form class="text-light" method="POST">
     {% csrf_token %}
