--- a/MVT/Templates/orders/create_orders.html
+++ b/MVT/Templates/orders/create_orders.html
@@ -6,7 +6,7 @@ creacion de Ordenes
 {% block content %}
 
 {% if form %}
-<h1>creacion de ordenes</h1>
+<h1 style="color: white;">creacion de ordenes</h1>
 
 <form class="text-light" method="POST">
     {% csrf_token %}
