--- a/MVT/Templates/patients/create_patient.html
+++ b/MVT/Templates/patients/create_patient.html
@@ -6,7 +6,7 @@ creacion de Pacientes
 
 {% block content %}
 {%  if form  %}
-<h1>Creacion de pacientes</h1>
+<h1 style="color: white;">Creacion de pacientes</h1>
 
 <form class="text-light" method="POST">
     {% csrf_token %}
