--- a/MVT/Templates/Base.html
+++ b/MVT/Templates/Base.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="{% static '/css/main.css' %}">
+    <link rel="stylesheet" href="{% static '/css/styleMain.css' %}">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -72,7 +72,7 @@
                     <a class="nav-link" href="/register/">Register</a>
                 </li>
                 {% endif %} {% block navbar %}
-                <form class="form-inline my-2 my-lg-0 d-flex" action="" method="GET">
+                <form class="form-inline my-2 my-lg-0 d-flex" action="" id= "search-bar"method="GET">
                     <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"
                         name="search" />
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
