--- a/MVT/Templates/patients/update_patient.html
+++ b/MVT/Templates/patients/update_patient.html
@@ -11,7 +11,7 @@
 
     {% if form %}
 
-        <form class="text-light" method="POST">
+        <form class="text-light" method="POST" enctype="multipart/form-data" >
             {% csrf_token %}
             <table>
                 {{form.as_table}}
