--- a/MVT/Templates/users/update_user.html
+++ b/MVT/Templates/users/update_user.html
@@ -8,7 +8,7 @@ Actualizar usuario
 {%  if form  %}
 <h1>Complete el formulario para actualizar usuario: {{user.username}} </h1>
 
-<form class="text-light" method="POST">
+<form class="text-light" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
 
     <table>
