--- a/MVT/Templates/users/update_user.html
+++ b/MVT/Templates/users/update_user.html
@@ -5,25 +5,25 @@ Actualizar usuario
 {% endblock %}
 
 {% block content %}
-{%  if form  %}
 <h1>Complete el formulario para actualizar usuario: {{user.username}} </h1>
 
-<form class="text-light" method="POST" enctype="multipart/form-data">
+
+{%  if form  %}
+
+<form action="" method="POST" enctype="multipart/form-data" >
+
     {% csrf_token %}
 
     <table>
         {{form.as_table}}
     </table>
 
-    <input type="submit" value="actualizar">
+
+    <input type="submit" value="Actualizar">
 </form>
-
-
 {% endif %}
 
 {% if errors %}
-
-<h2 style="color: red;" >{{errors}}</h2>
-
+{{errors}}
 {% endif %}
 {% endblock %}
